# padnas-data-science-udemy-course

./: README.md  pyproject.toml
src/the_complete_pandas_bootcamp_2024_data_science_with_python/: __init__.py
src/the_complete_pandas_bootcamp_2024_data_science_with_python/Course_Materials_ALL/Course_Materials_Part1/Coding_Exercises/: Exercise_01.ipynb  Exercise_02.ipynb  Exercise_02_Solution.ipynb  Exercise_03.ipynb  Exercise_03_Solution.ipynb  Exercise_04.ipynb  Exercise_04_Solution.ipynb  Exercise_05.ipynb  Exercise_06.ipynb  Exercise_07.ipynb  Exercise_08.ipynb  Exercise_08_Solution.ipynb
src/the_complete_pandas_bootcamp_2024_data_science_with_python/Course_Materials_ALL/Course_Materials_Part1/Video_Lecture_NBs/: NB_01_Pandas_Basics.ipynb  NB_02_Pandas_Series.ipynb  NB_03_Pandas_Index_Objects.ipynb  NB_04_DataFrame_Basics_II.ipynb  NB_05_Manipulating_Values_in_DataFrame.ipynb  NB_06_DataFrame_Basics_III.ipynb  Pandas1.ipynb
src/the_complete_pandas_bootcamp_2024_data_science_with_python/Course_Materials_ALL/Course_Materials_Part2/Coding_Exercises/: Exercise_10.ipynb  Exercise_11.ipynb  cars_imp.csv
src/the_complete_pandas_bootcamp_2024_data_science_with_python/Course_Materials_ALL/Course_Materials_Part2/Video_Lecture_NBs/: NB_08_Importing CSV Files.ipynb  NB_09_Importing Excel Files.ipynb  NB_10_Importing Data from Web.ipynb  NB_11_Cleaning Data.ipynb
